Update gap logic to demonstrate micro-gap necessity in simulation

--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
 
                     <div class="control-group">
                         <label>
-                            <input type="checkbox" id="hasGap">
-                            🪝 振り子同士に隙間をあける
+                            <input type="checkbox" id="hasGap" checked>
+                            🪝 微小な隙間（すきま）をあける
                         </label>
-                        <small class="hint-text">※ 隙間があると、力がうまく伝わらなくて「ニュートンのゆりかご」にならないよ！試してみてね。</small>
+                        <small class="hint-text">※
+                            シミュレーションの世界では、球が完全にくっついていると1つの物体とみなされて力が伝わりません。チェックを入れて「わずかな隙間」を作ると、ニュートンのゆりかごが成功します！</small>
                     </div>
 
                     <fieldset class="mass-group">
